# resume-builder

./: .env.example  .gitignore  .pre-commit-config.yaml  QUICK_START.md  README.md  main.py  pyproject.toml  run.sh  setup_project_uv.py  start_app.sh
.continue/rules/: new-rule-1.md  new-rule-2.md  new-rule-3.md  new-rule.md
data/input/job_descriptions/: setup_files_final.txt
docs/: UI_Arch.md  architecture.md  class_diagram.md  gemini_job_analyzer.md
docs/streamlit_fixes/: APP_RUNNING.md  FINAL_FIX.md  FIXED_AND_READY.md  GEMINI_ANALYZER_INTEGRATION.md  GEMINI_API_SETUP.md  GEMINI_API_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  README_STREAMLIT.md  RESTART_APP.md  SETUP_AND_RUN.md  STREAMLIT_QUICKSTART.md  STREAMLIT_UI_IMPLEMENTATION.md
examples/: gemini_job_analyzer_example.py
notebook/: module_testing_notebook.ipynb
notebook/ai_integration_test/: 0_ai_integration_test.ipynb
scripts/: generate_class_diagram.py  run_end_to_end_stub.py  run_full_flow.py  validate_gemini_parser.py
src/resume_optimizer/config/: settings.py
src/resume_optimizer/core/: models.py
src/resume_optimizer/core/ai_integration/: base_client.py  gemini_client.py  ollama_client.py  perplexity_client.py
src/resume_optimizer/core/ats_optimizer/: ollama_optimizer.py  optimizer.py
src/resume_optimizer/core/converters/: __init__.py  docx_converter.py  markdown_converter.py
src/resume_optimizer/core/job_analyzer/: __init__.py  analyzer.py  gemini_analyzer.py  ollama_analyzer.py
src/resume_optimizer/core/pdf_generator/: __init__.py  generator.py  weasyprint_generator.py
src/resume_optimizer/core/pdf_generator/templates/: resume_style.css  resume_template.html
src/resume_optimizer/core/resume_parser/: GeminiParser.py  OllamaParser.py  ResumeParserFactory.py  __init__.py  parser.py
src/resume_optimizer/streamlit_ui/: app.py  utils.py
src/resume_optimizer/streamlit_ui/components/: common.py  editors.py  markdown_editor.py  progress.py  status_indicators.py  validators.py
src/resume_optimizer/streamlit_ui/stages/: stage1_resume_parsing.py  stage2_job_analysis.py  stage3_ats_optimization.py  stage4_pdf_generation.py
src/resume_optimizer/streamlit_ui/state/: __init__.py  session_manager.py  validators.py
src/resume_optimizer/streamlit_ui/utils/: __init__.py  helpers.py  storage.py
src/resume_optimizer/utils/: exceptions.py  rate_limiter.py
tests/: test_gemini_job_analyzer.py  test_integration_stages.py
